--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="https://blog.sheensong.top" class="blog-button">
+                                        <a href="http://blog.sheensong.top" class="blog-button">
                                             <div>博客</div>
                                         </a>
                                     </li>
@@ -99,7 +99,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="https://blog.sheensong.top/%E5%85%B3%E4%BA%8E%E6%88%91/"
+                                        <a href="https://weblog.sheensong.top/%E5%85%B3%E4%BA%8E%E6%88%91/"
                                             class="blog-button">
                                             <div>关于我</div>
                                         </a>
