--- a/index.html
+++ b/index.html
@@ -77,13 +77,18 @@
                             <nav class="cover-navigation cover-navigation--primary">
                                 <ul class="navigation">
                                     <li class="navigation__item">
-                                        <a href="http://blog.sheensong.top" class="blog-button">
-                                            <div>博客</div>
+                                        <a href="https://sheensong.top/academic" class="blog-button">
+                                            <div>Academic Homepage</div>
+                                        </a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="https://sheensong.top/blog" class="blog-button">
+                                            <div>Blog Post</div>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="http://cv.sheensong.top" target="_blank" class="blog-button">
-                                            <div>简历</div>
+                                            <div>CV</div>
                                         </a>
                                     </li>
                                     <!-- <li class="navigation__item">
@@ -95,13 +100,13 @@
                                     <li class="navigation__item">
                                         <a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzIzNDY1NjcwMQ==&hid=2&sn=e8fe1770d1ee0f3961def1d53507f355&scene=18#wechat_redirect"
                                             target="_blank" class="blog-button">
-                                            <div>公众号</div>
+                                            <div>Wechat Public Account</div>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://weblog.sheensong.top/%E5%85%B3%E4%BA%8E%E6%88%91/"
                                             class="blog-button">
-                                            <div>关于我</div>
+                                            <div>About me</div>
                                         </a>
                                     </li>
                                 </ul>
