--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
                                             <div>CSCA</div>
                                         </a>
                                     </li> -->
-                                    <li class="navigation__item">
+                                    <!-- <li class="navigation__item">
                                         <a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzIzNDY1NjcwMQ==&hid=2&sn=e8fe1770d1ee0f3961def1d53507f355&scene=18#wechat_redirect"
                                             target="_blank" class="blog-button">
                                             <div>Wechat Public Account</div>
                                         </a>
-                                    </li>
-                                    <li class="navigation__item">
+                                    </li> -->
+                                    <!-- <li class="navigation__item">
                                         <a href="https://weblog.sheensong.top/%E5%85%B3%E4%BA%8E%E6%88%91/"
                                             class="blog-button">
                                             <div>About me</div>
                                         </a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </nav>
                         </div>
