--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="force-rendering" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=sheen">
+    <meta name="description" content="sheen">
     <meta name="keywords" content="sheen,主页">
     <meta name="author" content="sheen">
+    <meta http-equiv="Access-Control-Allow-Origin" content="sheensong.top">
+
     <title>未央的主页</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
@@ -218,9 +220,6 @@
         <div id="fps"
             style="z-index:5;position:fixed;bottom:3px;left:3px;color:#2196F3;font-size:10px;-webkit-pointer-events: none;    -moz-pointer-events: none;    -ms-pointer-events: none;    -o-pointer-events: none;">
         </div>
-
-
-
     </header>
     <!--izitoast弹窗设置-->
     <script>
@@ -249,7 +248,6 @@
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./js/fetch.min.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
-
 </body>
 
 </html>
