update index.html and add README.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             </div>
                             <div class="info iUp">
                                 <div class="info-back">
-                                    <h2>Coding</h2>
-                                    <p>2022 · 加油</p>
+                                    <h2>博士</h2>
+                                    <p>早日毕业</p>
                                 </div>
                             </div>
                         </a>
@@ -117,13 +117,12 @@
                         <div class="iUp">
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
-
-                                    <li class="navigation__item">
+                                    <!-- <li class="navigation__item">
                                         <a href="https://gitee.com/sheenisme" title="Gitee @sheenisme" target="_blank">
                                             <i class="fab fa-git"></i>
                                             <span class="label">Gitee</span>
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <li class="navigation__item">
                                         <a href="https://github.com/sheenisme" title="GitHub @sheenisme"
                                             target="_blank">
@@ -151,31 +150,13 @@
                                         </a>
                                     </li> -->
                                     <li class="navigation__item">
-                                        <a onclick="weixin()" title="微信 @sheenisme" target="_blank">
+                                        <a onclick="weixin()" title="微信公众号 @未央说" target="_blank">
                                             <i class="fab fa-weixin"></i>
                                             <span class="label">微信</span>
                                             <script>
                                                 function weixin() {
                                                     Swal.fire({
-                                                        // title: "请扫码",
-                                                        text: "请使用微信扫一扫, 加我为微信好友。",
-                                                        confirmButtonText: "好的",
-                                                        imageUrl: "./images/weixin.png",
-                                                        imageWidth: 150,
-                                                        imageHeight: 150
-                                                    })
-                                                }
-                                            </script>
-                                        </a>
-                                    </li>
-                                    <!-- <li class="navigation__item">
-                                        <a onclick="weixingongzhonghao()" title="微信公众号 @未央说" target="_blank">
-                                            <i class="fa fa-rss"></i>
-                                            <span class="label">微信公众号</span>
-                                            <script>
-                                                function weixingongzhonghao() {
-                                                    Swal.fire({
-                                                        // title: "请扫码",
+                                                        title: "请扫码",
                                                         text: "请使用微信扫一扫, 关注我的微信公众号-未央说。",
                                                         confirmButtonText: "好的",
                                                         imageUrl: "./images/weixin-applet.jpg",
@@ -185,7 +166,7 @@
                                                 }
                                             </script>
                                         </a>
-                                    </li> -->
+                                    </li>
                                     <li class="navigation__item">
                                         <a onclick="send_email()" title="Email sheensong@163.com">
                                             <i class="fas fa-envelope"></i>
