updaye index.html

--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                                 <ul class="navigation">
                                     <li class="navigation__item">
                                         <a href="https://sheensong.top/academic" class="blog-button">
-                                            <div>Academic Homepage</div>
+                                            <div>学术主页</div>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="https://sheensong.top/blog" class="blog-button">
-                                            <div>Blog Post</div>
+                                            <div>博客</div>
                                         </a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="http://cv.sheensong.top" target="_blank" class="blog-button">
-                                            <div>CV</div>
+                                            <div>简历</div>
                                         </a>
                                     </li>
                                     <!-- <li class="navigation__item">
@@ -102,13 +102,13 @@
                                     <!-- <li class="navigation__item">
                                         <a href="https://mp.weixin.qq.com/mp/homepage?__biz=MzIzNDY1NjcwMQ==&hid=2&sn=e8fe1770d1ee0f3961def1d53507f355&scene=18#wechat_redirect"
                                             target="_blank" class="blog-button">
-                                            <div>Wechat Public Account</div>
+                                            <div>微信公众号</div>
                                         </a>
                                     </li> -->
                                     <!-- <li class="navigation__item">
                                         <a href="https://weblog.sheensong.top/%E5%85%B3%E4%BA%8E%E6%88%91/"
                                             class="blog-button">
-                                            <div>About me</div>
+                                            <div>关于我</div>
                                         </a>
                                     </li> -->
                                 </ul>
