--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="sheen">
     <meta http-equiv="Access-Control-Allow-Origin" content="sheensong.top">
 
-    <title>未央的首页</title>
+    <title>首页</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
     <link rel="apple-touch-icon" href="./images/logo.png">
