update cv link.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         </a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="http://cv.sheensong.top" target="_blank" class="blog-button">
+                                        <a href="https://sheensong.top/blog/CV" target="_blank" class="blog-button">
                                             <div>简历</div>
                                         </a>
                                     </li>
