--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 about: '关于我',
                 emailText: '我的邮箱是sheensong@163.com, 欢迎随时发邮件交流。',
                 weixinText: '请使用微信扫一扫, 关注我的微信公众号-未央说。',
+                linkedinText: '欢迎访问我的LinkedIn主页。',
                 confirmBtn: '好的'
             },
             'en': {
@@ -61,6 +62,7 @@
                 about: 'About',
                 emailText: 'My email is sheensong@163.com, feel free to contact me.',
                 weixinText: 'Please scan the QR code to follow my WeChat public account - 未央说.',
+                linkedinText: 'Welcome to visit my LinkedIn profile.',
                 confirmBtn: 'OK'
             }
         };
@@ -169,6 +171,13 @@
                                             <span class="label">Github</span>
                                         </a>
                                     </li>
+                                    <li class="navigation__item">
+                                        <a href="https://www.linkedin.com/in/guanghui-song-139b642b8/" title="LinkedIn @Guanghui Song"
+                                            target="_blank">
+                                            <i class="fab fa-linkedin"></i>
+                                            <span class="label">LinkedIn</span>
+                                        </a>
+                                    </li>
                                     <!-- <li class="navigation__item">
                                         <a href="/" title="Telegram" target="_blank">
                                             <i class="fab fa-telegram-plane"></i>
@@ -188,7 +197,7 @@
                                             <span class="label">QQ</span>
                                         </a>
                                     </li> -->
-                                    <li class="navigation__item">
+                                    <!-- <li class="navigation__item">
                                         <a onclick="weixin()" title="微信公众号 @未央说" target="_blank">
                                             <i class="fab fa-weixin"></i>
                                             <span class="label">微信</span>
@@ -205,7 +214,7 @@
                                                 }
                                             </script>
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <li class="navigation__item">
                                         <a onclick="send_email()" title="Email sheensong@163.com">
                                             <i class="fas fa-envelope"></i>
